<resources>
    <string name="app_name">MessengerInfolga</string>
    <string name="microphone">Microphone</string>
    <string name="remove">Remove</string>

    <string name="olocaladdress">ec2-34-218-147-163.us-west-2.compute.amazonaws.com</string>
    <string name="serverPort">8080</string>
    <string name="localaddress">192.168.0.120</string>

    <string name="search_hint">Поиск</string>
    <string name="title_activity_main2">MessengerInfolga</string>
    <string name="title_activity_find_user">Find User</string>
    <string name="title_activity_ConversationActivity">Conversation</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="TABLE_users">Settings</string>
    <string name="TABLE_contacts">Settings</string>
    <string name="TABLE_conversation">Settings</string>
    <string name="TABLE_messages">Settings</string>
    <string name="TABLE_participants">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">*Phone</string>
    <string name="prompt_password">*Password</string>
    <string name="prompt_passwordReturn">*Confirm the password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_registration">Registration</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_Valid_password">This password is invalid</string>
    <string name="error_not_match">Passwords do not match</string>
    <string name="error_invalid_username">This username is incorrect</string>
    <string name="error_invalid_firstname">This firstname is incorrect</string>
    <string name="error_invalid_field">This field is incorrect</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registration">Registration</string>
    <string name="action_first_name">*First name </string>
    <string name="action_user_name">*User name</string>
    <string name="action_email">Email</string>
    <string name="action_last_name">Last name</string>

    <string name="menu_add_user">Add user</string>



    <string name="test"> </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
